--- a/src/app/modules/chat/chat.component.html
+++ b/src/app/modules/chat/chat.component.html
@@ -1,4 +1,4 @@
-<app-header-feed></app-header-feed>
+<app-header></app-header>
 <div class="chat-container" [ngClass]="{'chat-open': isChatWindowOpen && isMobileView}">
   <div class="chat-sidebar" *ngIf="!isMobileView || !isChatWindowOpen">
     <app-chat-siderbar (chatSelected)="onChatSelected($event)"></app-chat-siderbar>
