--- a/src/app/modules/notes/notes.component.html
+++ b/src/app/modules/notes/notes.component.html
@@ -1,5 +1,4 @@
-<app-header-feed></app-header-feed>
-
+<app-header></app-header>
 <div class="main-container">
   <app-sidebar *ngIf="isSidebarVisible && !isMobileView"></app-sidebar>
   <div class="notes-list">
