--- a/src/app/modules/profile/profile.component.html
+++ b/src/app/modules/profile/profile.component.html
@@ -1,4 +1,4 @@
-<app-header-feed></app-header-feed>
+<app-header></app-header>
 <app-head></app-head>
 <div class="main-container">
     <app-sidebar *ngIf="isSidebarVisible && !isMobileView"></app-sidebar>
