--- a/src/app/modules/about/about.component.scss
+++ b/src/app/modules/about/about.component.scss
@@ -6,7 +6,7 @@
     color: #333;
     line-height: 1.6;
 }
-  
+
 .about-section-h2 {
     font-family: "Merriweather Sans", sans-serif;
     font-weight: bold;
@@ -15,18 +15,48 @@
     color: #0d3b66;
     margin-bottom: 20px;
 }
-  
+
 .about-section-h3 {
     font-size: 1.5em;
     color: #1a4f8e;
-    margin-top: 20px;
+    margin-bottom: 10px;
     font-family: "Merriweather Sans", sans-serif;
     font-weight: bold;
 }
-  
+
 .about-section-p {
     font-size: 1em;
+    text-align: justify;
     margin-bottom: 15px;
     font-family: "Merriweather Sans", sans-serif;
-    text-align: justify;
+}
+
+.about-item {
+    display: flex;
+    align-items: flex-start;
+    gap: 20px;
+    margin-bottom: 40px;
+}
+
+.about-image {
+    flex-shrink: 0;
+    width: 120px;
+    height: 120px;
+    border-radius: 10px;
+    object-fit: cover;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+}
+
+.about-item > div {
+    flex-grow: 1;
+}
+
+.image-black {
+    flex-shrink: 0;
+    width: 120px;
+    height: 120px;
+    border-radius: 10px;
+    object-fit: cover;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    filter: invert(1);
 }
