--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,5 +1,5 @@
 <header class="header-class">
-    <img class="header-class-img" src="CASM.png" alt="Logo CASM" />
+    <img class="header-class-img" src="CASM.png" alt="Logo CASM" (click)="redirect_to_home($event)" />
     
     <nav class="nav-class">
       <!-- Si el usuario está logeado, mostrar estas opciones -->
