--- a/src/app/components/directory-card/directory-card.component.scss
+++ b/src/app/components/directory-card/directory-card.component.scss
@@ -77,6 +77,7 @@
 
 .message-button {
     margin-top: 10px;
+    max-width: 500px;
     background-color: #0d3b66;
     color: white;
     border: none;
