login y transferencia de token

--- a/src/app/modules/register/register.component.html
+++ b/src/app/modules/register/register.component.html
@@ -11,7 +11,7 @@
         
             <input class="register-box-input" type="password" id="password" name="password" placeholder="Contraseña" required>
         
-            <button class="register-box-button" type="submit" (click)="registerUser($event)">Registrar</button>
+            <button class="register-box-button" type="button" (click)="registerUser($event)">Registrar</button>
         </form>
         
         <div class="register-professional">
