--- a/src/app/modules/notes/notes.component.html
+++ b/src/app/modules/notes/notes.component.html
@@ -5,7 +5,7 @@
     <ng-container *ngFor="let note of notes">
       <app-note-card
         [title]="note.title"
-        [content]="note.content">
+        [content]="note.description">
       </app-note-card>
     </ng-container>
   </div>
