mejoras en interfaces

--- a/src/app/components/directory-card/directory-card.component.html
+++ b/src/app/components/directory-card/directory-card.component.html
@@ -12,7 +12,7 @@
                     <i class="fas fa-envelope"></i> {{ email }}
                 </p>
             </div>
-            <button class="message-button">
+            <button class="message-button" (click)="onSendMessage()">
                 <i class="fas fa-paper-plane"></i> Enviar Mensaje
             </button>
         </div>
