--- a/src/app/components/note-card/note-card.component.html
+++ b/src/app/components/note-card/note-card.component.html
@@ -1,6 +1,8 @@
 <div class="note-card">
-    <h3 class="note-title">{{ title }}</h3>
+    <h1 class="tittle-note">CASM</h1>
+    <h3 class="note-title">Titulo: {{ title }}</h3>
     <p class="note-content">{{ content }}</p>
     <button class="share-button" (click)="shareNote()">Compartir en el Feed</button>
   </div>
+  
   
