--- a/src/app/components/sidebar/sidebar.component.scss
+++ b/src/app/components/sidebar/sidebar.component.scss
@@ -23,6 +23,7 @@
 
 .sidebar-a {
     text-decoration: none;
+    font-family: "Parkinsans", sans-serif;
     cursor: pointer;
     color: #333;
     font-size: 1.1em;
