--- a/src/app/modules/notes/notes.component.html
+++ b/src/app/modules/notes/notes.component.html
@@ -32,4 +32,42 @@
   </ul>
 </footer>
 
+<button class="floating-button" (click)="openNoteDialog()">
+  <i class="fas fa-plus"></i>
+</button>
+
+<button class="floating-button" (click)="openNoteDialog()">
+  <i class="fas fa-plus"></i>
+</button>
+
+<div class="agregar-nota-modal" [ngClass]="{'show': isModalOpen}">
+  <img src="CASM.png" alt="logo" class="logo">
+
+  <h1 class="title-modal">Agregar Notas</h1>
+
+  <label for="title" class="label-input">Ingrese el titulo de la nota</label>
+  <input type="text" id="title" placeholder="Titulo de la nota" class="input-text">
+
+  <label for="content" class="label-input">Ingrese el contenido de la nota</label>
+  <textarea id="content" placeholder="contenido de la nota" class="textarea-note"></textarea>
+
+  <button class="btn-cancel" (click)="closeNoteDialog()">
+    <i class="fas fa-times"></i> Cancelar
+  </button>
+
+  <button>
+    <i class="fas fa-save"></i> Guardar
+  </button>
+</div>
+
+
+
+<!--
+titulo
+contenido
+imagen 
+
+boton cancelar y guardar
+-->
+
 <app-footer></app-footer>
