--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -19,6 +19,7 @@
 
 .nav-class-a {
     text-decoration: none;
+    font-family: "Parkinsans", sans-serif;
     color: #ffffff;
     font-weight: 500;
     font-size: 18px;
