--- a/src/app/modules/notes/notes.component.scss
+++ b/src/app/modules/notes/notes.component.scss
@@ -102,6 +102,113 @@
     color: #007bff;
 }
 
+  .agregar-nota-modal.show {
+    opacity: 1;
+    visibility: visible;
+  }
+  
+  .agregar-nota-modal {
+    text-align: center;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: #fff;
+    padding: 2rem;
+    border-radius: 10px;
+    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
+    width: 100%;
+    max-width: 500px;
+    z-index: 999;
+    opacity: 0;
+    visibility: hidden;
+    transition: opacity 0.3s ease, visibility 0.3s ease;
+  }
+  
+  .agregar-nota-modal.show {
+    opacity: 1;
+    visibility: visible;
+  }
+  
+  .logo {
+    width: 80px;
+    border-radius: 15%;
+    margin-bottom: 1rem;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    background-color: #333333;
+  }
+  
+  .title-modal {
+    text-align: center;
+    font-size: 1.8rem;
+    margin-bottom: 1rem;
+    font-family: "Parkinsans", sans-serif;
+  }
+  
+  .label-input {
+    display: block;
+    margin-bottom: 0.5rem;
+    font-size: 1rem;
+    font-family: "Parkinsans", sans-serif;
+    color: #333;
+  }
+  
+  .input-text, .textarea-note {
+    width: 90%;
+    padding: 0.8rem;
+    margin-bottom: 1rem;
+    border-radius: 5px;
+    font-family: "Parkinsans", sans-serif;
+    border: 1px solid #ccc;
+    font-size: 1rem;
+  }
+  
+  .textarea-note {
+    resize: vertical;
+    min-height: 100px;
+  }
+  
+  button {
+    padding: 0.8rem 1.5rem;
+    border-radius: 5px;
+    border: none;
+    font-size: 1rem;
+    font-family: "Parkinsans", sans-serif;
+    margin-right: 1rem;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+  }
+  
+  .btn-imagen-upload {
+    background-color: #3a7ff0;
+    color: white;
+  }
+  
+  .btn-imagen-upload:hover {
+    background-color: #2f6bc1;
+  }
+  
+  .btn-cancel {
+    background-color: #f44336;
+    color: white;
+  }
+  
+  .btn-cancel:hover {
+    background-color: #e53935;
+  }
+  
+  button:last-child {
+    background-color: #4caf50;
+    color: white;
+  }
+  
+  button:last-child:hover {
+    background-color: #45a049;
+  }
+  
+  
 @media (max-width: 767px) {
     .main-container {
         flex-direction: column;
