actualizacion de modelos

--- a/src/app/components/publication-card/publication-card.component.html
+++ b/src/app/components/publication-card/publication-card.component.html
@@ -9,5 +9,7 @@
         </div>
     </div>
     <p class="description">{{ description }}</p>
-    <img class="post-img" [src]="image" alt="post-image">
+    <div class="image-container">
+        <img class="post-img" [src]="image" alt="post-image">
+    </div>
 </div>
