--- a/src/app/modules/register-voluntary/register-voluntary.component.html
+++ b/src/app/modules/register-voluntary/register-voluntary.component.html
@@ -10,7 +10,7 @@
       <input class="register-box-input" type="email" id="email" name="email" placeholder="Correo Electrónico" required>
       <input class="register-box-input" type="password" id="password" name="password" placeholder="Contraseña" required>
       <div class="register-box-file">
-        <label class="register-box-label" for="file-upload">Documento de Validación:</label>
+        <label class="register-box-label" for="file-upload">Cedula Profesional:</label>
         <input class="register-box-file-input" id="file-upload" type="file" name="file" required>
       </div>
       <div class="register-box-button-container">
