--- a/src/app/components/publication-card/publication-card.component.scss
+++ b/src/app/components/publication-card/publication-card.component.scss
@@ -1,6 +1,8 @@
 .publication-card {
     position: relative;
-    width: 95%;
+    width: 98%;
+    max-width: 98%;
+    height: 400px;
     background-color: #ffffff;
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
     border-radius: 10px;
@@ -9,7 +11,6 @@
     display: flex;
     flex-direction: column;
     gap: 10px;
-    margin-left: 5px;
 }
 
 .publication-header {
@@ -25,12 +26,6 @@
     gap: 10px;
 }
 
-.header-icons {
-    display: flex;
-    align-items: center;
-    cursor: pointer;
-}
-
 .profile-img {
     width: 50px;
     height: 50px;
@@ -43,21 +38,42 @@
     color: #333;
 }
 
+.header-icons {
+    display: flex;
+    align-items: center;
+    cursor: pointer;
+}
+
 .description {
     font-size: 1em;
     color: #666;
 }
 
+/* Contenedor de la imagen */
+.image-container {
+    position: relative;
+    width: 100%;
+    height: 250px;
+    background-color: #f0f0f0;
+    border-radius: 10px;
+    overflow: hidden;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+/* Imagen de la publicación */
 .post-img {
     max-width: 100%;
-    max-height: 450px;
-    object-fit: cover;
+    max-height: 100%;
+    object-fit: contain;
     border-radius: 10px;
 }
 
+/* Estilos responsivos */
 @media (max-width: 767px) {
     .publication-card {
-        width: 90%;
+        height: 350px;
         padding: 15px;
     }
 
@@ -69,8 +85,8 @@
         font-size: 0.9em;
     }
 
-    .post-img {
-        max-height: 300px;
+    .image-container {
+        height: 200px;
     }
 
     .profile-img {
@@ -81,7 +97,7 @@
 
 @media (min-width: 768px) and (max-width: 1023px) {
     .publication-card {
-        width: 80%;
+        height: 380px;
     }
 
     .user-name {
@@ -92,7 +108,25 @@
         font-size: 1em;
     }
 
-    .post-img {
-        max-height: 400px;
+    .image-container {
+        height: 220px;
+    }
+}
+
+@media (min-width: 1024px) {
+    .publication-card {
+        height: 400px;
+    }
+
+    .user-name {
+        font-size: 1.2em;
+    }
+
+    .description {
+        font-size: 1em;
+    }
+
+    .image-container {
+        height: 250px;
     }
 }
