--- a/src/app/modules/feed/feed.component.html
+++ b/src/app/modules/feed/feed.component.html
@@ -5,7 +5,7 @@
         <ng-container *ngFor="let publication of publications">
             <app-publication-card 
                 [photo_profile]="publication.image" 
-                [user_name]="publication.user_name" 
+                [user_name]="publication.user_id"
                 [description]="publication.description" 
                 [image]="publication.image">
             </app-publication-card>
@@ -25,6 +25,26 @@
       (share)="onShare($event)">
     </app-note-card>
 </div>
+
+<div class="agregar-publication-modal" [ngClass]="{'show': isModalOpen}">
+    <img src="CASM.png" alt="logo" class="logo">
+  
+    <h1 class="title-modal">Agregar Publicación</h1>
+  
+    <label for="description" class="label-input">Ingresa la descripción</label>
+    <input type="text" id="description" placeholder="Descripción de la publicación" class="input-text">
+  
+    <label for="content" class="label-input">Agrega una imagen</label>
+    <input type="file" id="content" placeholder="Agrega una imagen" class="publication-image">
+  
+    <button class="btn-cancel" (click)="closePublicationDialog()">
+      <i class="fas fa-times"></i> Cancelar
+    </button>
+  
+    <button>
+      <i class="fas fa-save"></i> Publicar
+    </button>
+  </div>
 
 <footer *ngIf="isMobileView" class="footer-menu">
     <ul class="footer-ul">
